--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ img#bgfetec {
 
 .ne {
     display: flex;
+    text-align: center;
     flex-direction: column;
     align-items: center;
     justify-content: center;
