--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,33 @@ img#bgfetec {
     background-color: #0f0f0f;
 }
 
+#fetec a img:hover {
+    box-shadow: 0px 0px 5px #21b9f5;
+}
+
+#bot {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    position: absolute;
+    bottom: 50px;
+}
+
+#bot button {
+    background: none;
+    border: none;
+}
+
+#bot button i {
+    color: #f0f0f0;
+    font-size: 30px;
+}
+
+#bot button i:hover {
+    color: #21b9f5;
+    font-size: 30px;
+}
+
 /*ETEC*/
 
 #et {
@@ -164,6 +191,30 @@ img#bgfetec {
 #fotoetec {
     border-radius: 5000px;
     height: 50vh;
+}
+
+#fotoetec:hover {
+    box-shadow: 0px 0px 5px #21b9f5;
+}
+
+#informatica {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100vh;
+    background: #0f0f0f;
+    color: #f0f0f0;
+}
+
+#informatica iframe:hover {
+    box-shadow: 0px 0px 10px #21b9f5;
+}
+
+#texto {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 40vw;
 }
 
 #exposicoes {
