--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ img#bgfetec {
     align-items: center;
     justify-content: space-between;
     width: 20vw;
+    height: 30vh;
 }
 
 /*FOOTER*/
