--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ img#bgfetec {
     gap: 20px;
 }
 
-.ne a.button {
+a.button {
     background-color: #0f0f0f;
 }
 
@@ -272,6 +272,60 @@ img#bgfetec {
 
 .ne img {
     width: 20vw;
+}
+
+/*pages*/
+
+.apresentacao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    text-align: center;
+    gap: 5vh;
+    padding-top: 5vh;
+    width: 100vw;
+    height: 100vh;
+    color: #f0f0f0;
+    background-color: #0f0f0f;
+}
+
+.apresentacao img {
+    width: 40vw;
+}
+
+.apresentacao p {
+    width: 40vw;
+}
+
+.expo {
+    display: flex;
+    padding: 5px;
+    border: 2px solid #0f0f0f;
+    color: #0f0f0f;
+    font-weight: 500;
+    border-radius: 5px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.expo a.button{
+    color: #f0f0f0;
+    background-color: #0f0f0f;
+}
+
+.expo a.button:hover{
+    background-color: #21b9f5;
+    color: #0f0f0f;
+}
+
+.exposicoe {
+    display: flex;
+    width: 80vw;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #f0f0f0;
 }
 
 /*FOOTER*/
@@ -360,7 +414,7 @@ img#bgfetec {
         overflow-y: auto;
         height: 20vh;
     }
-    
+
     img#bgfetec {
         min-width: auto;
     }
