--- a/css/style.css
+++ b/css/style.css
@@ -215,12 +215,12 @@ img#bgfetec {
     color: #f0f0f0;
 }
 
-#informatica iframe { 
+.iframe { 
     width: 560px;
     height: 315px;
 }
 
-#informatica iframe:hover {
+.iframe:hover {
     box-shadow: 0px 0px 10px #21b9f5;
 }
 
