--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
 
 a {
     color: #f0f0f0;
+    text-decoration: none;
 }
 
 a.dark {
@@ -67,6 +68,68 @@ i {
 ::-webkit-scrollbar-thumb {
     width: 5px;
     background-color: #21b9f5;
+}
+
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+  
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #CCCCCC;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #f0f0f0;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #21b9f5;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #21b9f5;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+  
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
 }
 
 /*HEADER*/
@@ -346,16 +409,19 @@ a.button {
     background-color: #f0f0f0;
 }
 
-
 .equipe {
     display: flex;
-    flex-direction: column;
     width: 100vw;
     min-height: 80vh;
     background-color: #f0f0f0;
     align-items: center;
     justify-content: center;
     gap: 10vh;
+}
+
+.equipe#j {
+    background-color: #0f0f0f;
+    color: #f0f0f0;
 }
 
 .equipe .iframe {
@@ -374,6 +440,12 @@ a.button {
 
 .tx {
     width: 400px;
+}
+
+.robotica#footer p:first-child {
+    padding: 15px;
+    padding-bottom: 0px;
+    border-top: 1px solid #f0f0f0;
 }
 
 /*FOOTER*/
