--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ img#bgfetec {
     width: 50vw;
 }
 
-#fotoetec:hover {
+img:hover {
     box-shadow: 0px 0px 5px #21b9f5;
 }
 
@@ -364,6 +364,59 @@ a.button {
 }
 
 /*pages*/
+
+#guitar {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--background-color);
+    color: var(--font-color);
+    align-items: center;
+    justify-content: space-around;
+}
+
+#esquerda {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 40vw;
+}
+
+#esquerda a.button {
+    width: 10vw;
+    text-align: center;
+}
+
+#guitar iframe {
+    border-radius: 10px;
+    border: 2px solid var(--font-color);
+}
+
+.exposicoes#espaco {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5vw;
+    color: #f0f0f0;
+    background-color: #0f0f0f;
+}
+
+.exposicoe#espaco {
+    background-color: #0f0f0f;
+    color: #f0f0f0;
+}
+
+.exposicoe#espaco .expo {
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
+    gap: 10px;
+    border: 2px solid #f0f0f0;
+}
+
+.exposicoe#espaco a.button:hover i {
+    color: #0f0f0f;
+}
 
 .apresentacao {
     display: flex;
@@ -521,6 +574,9 @@ a.button {
 
 #footer a.button {
     z-index: 0;
+    padding: 10px;
+    border-radius: 0;
+    border-top: 2px solid #f0f0f0;
 }
 
 @media (max-width:600px) {
