--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 var {
-    --background-color: #f0f0f0
+    --background-color: #f0f0f0;
     --background-color2: #f0f0f0;
     --font-color: #0f0f0f;
     --font-color2: #0f0f0f;
